--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10965,4 +10965,12 @@ These options are activated:
     <value>File export finished</value>
     <comment>File export finished</comment>
   </data>
+  <data name="OptimizationOptionMessageBox" xml:space="preserve">
+    <value>Optimization Options</value>
+    <comment>Name of the message box</comment>
+  </data>
+  <data name="SelectAtleastOneOptimizationOption" xml:space="preserve">
+    <value>Please select atleast one option from Team Optimization. </value>
+    <comment>The Team Optimization options</comment>
+  </data>
 </root>
