--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10971,4 +10971,12 @@ These options are activated:
   <data name="SelectAtleastOneSchedulingOption" xml:space="preserve">
     <value>Please select at least one option from Team Scheduling.</value>
   </data>
+  <data name="NoScenarioSelected" xml:space="preserve">
+    <value>No scenario selected</value>
+    <comment>No scenario selected</comment>
+  </data>
+  <data name="PleaseSelectAScenario" xml:space="preserve">
+    <value>Please select a scenario.</value>
+    <comment>Please select a scenario.</comment>
+  </data>
 </root>
