--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10995,4 +10995,8 @@ These options are activated:
     <value>SMS Settings</value>
     <comment>Caption 2 in SMS settings page</comment>
   </data>
+  <data name="YourWorkingHoursHaveChanged" xml:space="preserve">
+    <value>Your working hours have changed</value>
+    <comment>text in sms message (later - Your working hours have changed these days:)</comment>
+  </data>
 </root>
